# taguru

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  deny.toml
.cargo/: mutants.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  docker.yml  perf.yml  release.yml  sdk-release.yml  sdk.yml
_archive/docs/: bedrock.md  extract.md  llm-protocol.md  mcp-rag-walkthrough.html
_archive/examples/: network_retrieval.rs
adr/: 0001-structured-extraction-reliability.md
adr/0001/: common.py  harness.py  rollup.py
adr/0001/corpus/: aliases.md  long_dense.md  negation.md  output_limit.md  short.md  table_noisy.md
adr/0001/golden/: aliases.json  long_dense.json  negation.json  output_limit.json  short.json
adr/0001/results/: attempts.jsonl  canary.json  capability_matrix.csv  failure_rates.csv  golden_recall.csv  item_counts_and_completion.csv  latency_tokens_percentiles.csv  lenient_vs_strict_delta.csv  lossless_correction.csv  summary.md  truncation_crosstab.csv
benches/: context.rs
deploy/: README.md  docker-compose.yml  kubernetes-replicas.yaml  kubernetes-stateless.yaml  kubernetes.yaml
deploy/kustomize/: README.md  verify.sh
deploy/kustomize/base/: kubernetes.yaml  kustomization.yaml
deploy/kustomize/overlays/replicas/: kustomization.yaml
deploy/kustomize/overlays/router/: kustomization.yaml  route-map  router.yaml
deploy/kustomize/overlays/stateless/: kubernetes-stateless.yaml  kustomization.yaml
docs/: architecture.html  bedrock.html  bedrock.md  concepts.html  docker-compose.html  extract.html  extract.md  getting-started.html  import.html  import.md  index.html  kubernetes.html  llm-protocol.md  mcp-rag-walkthrough.html  site.js  style.css  theme.js
examples/: README.md  accurate_retrieval.rs  benchmark.rs  network_retrieval.rs  paragraph_corpus.rs
examples/accurate_retrieval/: README.md
examples/benchmark/: README.md
examples/http_benchmark/: README.md  main.rs
examples/langchain/: .npmrc  README.md  package.json  requirements.txt
examples/langchain/conversational_memory/: README.md
examples/langchain/conversational_memory/python/: main.py
examples/langchain/conversational_memory/typescript/: main.ts  package.json  tsconfig.json
examples/langchain/document_ingestion/: README.md
examples/langchain/document_ingestion/python/: main.py
examples/langchain/document_ingestion/typescript/: main.ts  package.json
examples/langchain/rag_qa/: README.md
examples/langchain/rag_qa/python/: main.py
examples/langchain/rag_qa/typescript/: main.ts  package.json
examples/network_retrieval/: README.md
examples/paragraph_corpus/: README.md  main.rs
proptest-regressions/: embedding.txt  registry.txt
samples/: the-project-gutenberg-ebook-of-the-federalist-papers.txt
sdk/: README.md  package-lock.json  package.json
sdk/python/: README.md  pyproject.toml
sdk/python-langchain/: README.md  pyproject.toml
sdk/python-langchain/examples/: rag_demo.py
sdk/python-langchain/src/taguru_langchain/: __init__.py  _extract.py  events.py  ingest.py  retrievers.py
sdk/python-langchain/tests/integration/: conftest.py  test_e2e.py  test_standard.py
sdk/python-langchain/tests/unit/: conftest.py  test_events.py  test_extract.py  test_ingester.py  test_retriever.py
sdk/python/scripts/: check_surface.py  generate_sync.py
sdk/python/src/taguru/: __init__.py  _decode.py  _errors.py  _models.py  _retry.py  _shared.py  _types.py  testing.py
sdk/python/tests/integration/: conftest.py  test_auth_limits_and_transfer.py  test_full_loop.py  test_groups_and_cross_search.py
sdk/python/tests/unit/: conftest.py  test_drift_audit.py  test_errors.py  test_explain.py  (+4 more)
sdk/spec/: check_versions.py  surface.yaml
sdk/typescript/: LICENSE  README.md  eslint.config.js  package.json  tsconfig.json  vitest.config.ts
sdk/typescript-langchain/: README.md  package.json  tsconfig.json  vitest.config.ts
sdk/typescript-langchain/examples/: rag_demo.ts
sdk/typescript-langchain/src/: events.ts  extract.ts  index.ts  ingest.ts  retrievers.ts
sdk/typescript/scripts/: check-surface.ts
sdk/typescript/src/: client.ts  errors.ts  index.ts  models.ts  retry.ts  testing.ts  transport.ts
src/: api.rs  auth.rs  bm25.rs  calibrate.rs  cli.rs  communities.rs  compact.rs  config.rs  context.rs  context_proptest.rs  crc32c.rs  deadline.rs  embedding.rs  env.rs  estimate.rs  export.rs  extract.rs  groups.rs  hash.rs  hydrate.rs  ingest.rs  inspect.rs  lib.rs  limits.rs  llm-protocol.md  main.rs  mcp.rs  metrics.rs  oauth.rs  oauth_http.rs  paragraph.rs  passages.rs  registry.rs  remote_mcp.rs  replica.rs  route.rs  ship.rs  storage.rs  trace.rs  wal.rs
src/api/: aliases.rs  associations.rs  communities.rs  contexts.rs  coverage.rs  explore.rs  groups.rs  import.rs  recall.rs  resolve.rs  sources.rs  vocabulary.rs
src/context/: alias.rs  community.rs  entry_index.rs  gloss.rs  image.rs  proptests.rs  query.rs  resolve.rs  sources.rs  stats.rs  test_support.rs  traverse.rs  write.rs
src/mcp/: args.rs  protocol.rs  retrieve.rs  route.rs  schema.rs
src/registry/: associations.rs  boot.rs  concurrency.rs  context_io.rs  core_tests.rs  embeddings.rs  engine.rs  gauges.rs  group_ops.rs  lifecycle.rs  passages.rs  paths.rs  replication.rs  retrieval_cache.rs  search.rs  semantic_cache.rs  terms.rs  test_support.rs
src/registry/embeddings/: gloss_tests.rs  passage_tests.rs
tests/: cli.rs  code_recall.rs  http_api.rs  qa_recall.rs
tests/common/: recall.rs  spawn.rs
tests/http_api/: auth.rs  calibrate.rs  communities.rs  directory.rs  directory_labels_compact.rs  errors.rs  explore_audit.rs  extract.rs  groups.rs  groups_cross_mcp.rs  key_scopes_cross_context.rs  main.rs  mcp_basics.rs  metrics.rs  observability.rs  offline_import.rs  passages.rs  quotas.rs  reload.rs  replication.rs  resolve_match.rs  retrieval_cache.rs  retrieval_core.rs  routing.rs  search_log.rs  search_plan.rs  semantic_cache.rs  server.rs  server_ops.rs  source_metadata.rs  support.rs  width_probe.rs
(+49 files in other folders)
