[package]
name = "taguru"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Long-term semantic memory for LLMs: an association-graph server with structural recall, plus an MCP stdio bridge"
repository = "https://github.com/t0k0sh1/taguru"
readme = "README.md"
keywords = ["llm", "memory", "mcp", "knowledge-graph", "semantic-memory"]
categories = ["database-implementations", "web-programming::http-server"]
# samples/ is raw ingest material for manual runs (1.2 MB of it Project
# Gutenberg text) — nothing in src/ or tests/ reads it.
exclude = ["/samples", "/.github", "/Dockerfile", "/.dockerignore"]

[dependencies]
axum = "0.8.9"
ureq = { version = "2.12.1", features = ["json"] }
unicode-normalization = "0.1.25"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "net", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter", "json"] }
subtle = "2.6"
opentelemetry = { version = "0.32", default-features = false, features = ["trace"] }
opentelemetry_sdk = { version = "0.32", default-features = false, features = ["trace"] }
opentelemetry-otlp = { version = "0.32", default-features = false, features = ["trace", "http-proto", "http-json", "reqwest-blocking-client"] }
tracing-opentelemetry = { version = "0.33", default-features = false }
# Already in the tree through axum; made direct for ServiceExt::oneshot,
# which drives the in-process dispatch behind POST /mcp.
tower = { version = "0.5.3", features = ["util"] }
