[package]
name = "taguru"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "Long-term semantic memory for LLMs: an association-graph server with structural recall, plus an MCP stdio bridge"
repository = "https://github.com/t0k0sh1/taguru"
readme = "README.md"
keywords = ["llm", "memory", "mcp", "knowledge-graph", "semantic-memory"]
categories = ["database-implementations", "web-programming::http-server"]
# docs/ is the GitHub Pages site, deploy/ the operator manifests —
# nothing in src/ or tests/ reads either.
exclude = ["/docs", "/deploy", "/.github", "/Dockerfile", "/.dockerignore"]

[dependencies]
axum = "0.8.9"
ureq = { version = "2.12.1", features = ["json"] }
unicode-normalization = "0.1.25"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "net", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter", "json"] }
subtle = "2.6"
opentelemetry = { version = "0.32", default-features = false, features = ["trace"] }
opentelemetry_sdk = { version = "0.32", default-features = false, features = ["trace"] }
opentelemetry-otlp = { version = "0.32", default-features = false, features = ["trace", "http-proto", "http-json", "reqwest-blocking-client"] }
tracing-opentelemetry = { version = "0.33", default-features = false }
# Already in the tree through axum; made direct for ServiceExt::oneshot,
# which drives the in-process dispatch behind POST /mcp.
tower = { version = "0.5.3", features = ["util"] }
# Already in the tree through axum; made direct for LengthLimitError,
# which tells a capped MCP tool result apart from any other read
# failure on the in-process dispatch response.
http-body-util = "0.1.3"
# OAuth needs exactly two primitives: SHA-256 (PKCE, tokens hashed at
# rest) and a CSPRNG (token material). Both crates are tiny, pure-Rust,
# and already ubiquitous in the wider tree.
sha2 = "0.11"
getrandom = "0.4"
# Already in the tree through axum; made direct so the loopback
# redirect-URI check parses the host instead of matching a prefix.
url = "2.5"
# std::sync locks poison on panic, bricking the whole registry for the
# rest of the process; parking_lot's don't.
parking_lot = "0.12"

[dev-dependencies]
# Property-based tests for the hand-rolled binary formats (context
# images, WAL records, the BM25/embedding sidecars, passage
# snapshots): round-trip + fuzzed-corruption coverage the hand-picked
# byte-offset tests can't give on their own. Dev-only — never ships in
# either binary.
proptest = "1.11.0"
# Instruction-count regression benchmarks for Context's public API.
# iai-callgrind was renamed gungraun at 0.17.0; the old name is frozen
# at 0.16.1 with no further security fixes, so this targets the
# maintained successor under its new name.
gungraun = "0.19.4"

[[bench]]
name = "context"
harness = false

# Callgrind needs debug symbols to attribute instructions to source
# locations.
[profile.bench]
debug = true
