[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-taguru"
version = "0.4.0"
description = "LangChain integration for the Taguru long-term semantic memory server"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Takashi Yamashina" }]
keywords = ["taguru", "langchain", "llm", "memory", "rag", "retriever"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Typing :: Typed",
]
dependencies = [
    "taguru>=0.4.0,<0.5.0",
    "langchain-core>=1.0.0,<2.0.0",
]

[project.urls]
Homepage = "https://github.com/t0k0sh1/taguru"
Repository = "https://github.com/t0k0sh1/taguru"

[tool.uv.sources]
# Without this, `uv sync` resolves `taguru` from PyPI instead of this
# repo's own sdk/python — so a local change there (or a stale .venv
# predating one) silently goes untested here, the same class of drift
# npm workspaces rule out for the TS twin (sdk/package.json).
taguru = { path = "../python", editable = true }

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.11",
    "langchain-tests>=1.0.0",
    "pip-audit>=2.7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/taguru_langchain"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
strict = true
files = ["src"]
